Fixed overflow on sign in page.

--- a/src/Components/static/signin.css
+++ b/src/Components/static/signin.css
@@ -3,6 +3,7 @@
 /* Global */
 body {
   height: 100%;
+  overflow-x: hidden;
 }
 
 
